syntax = "proto3";

option java_multiple_files = true;
option java_package ="com.sample.grpcsample.balanceService";


enum UserType {
  FULLKYC = 0;
  MINKYC = 1;
}
message BalanceDTO{
  int32  available_balance =1;
  int32  used_balance = 2;
  int32 account_id =3 ;
  string user_name = 4;
}

message BalanceRequest{
  UserType userType=1;
  string user_id=2;
}

message BalanceResponse
{
  int32 available_balance=1;
  int32  used_balance = 2;
  int32 account_id =3 ;
  string user_name = 4;

}

service  BalanceService{
  rpc getBalance(BalanceRequest) returns (BalanceResponse);
}